Changelog
=========

* Keep dots in filename during id normalization.
  [thomasdesvenain]

* Plone 4.1 compatibility.
  [vincentfretin]

1.0.3
-----

* let an empty content_type when mimetype_registry return None as mimetype object.
  will result in "application/octet-stream"
  macadames 2010-09-29

* use a specific interface IQuickUploadFactory in place of IFileFactory
  to avoid possible conflicts with another products using the same interface
  http://plone.org/products/collective.quickupload/issues/4
  macadames and mroeder 2010-10-07

* files id consolidation
  macadames and mroeder 2010-10-07

* log some rare exceptions (bad id, no primary field ...)
  resolve http://plone.org/products/collective.quickupload/issues/6
  macadames and mroeder 2010-10-08

* fix error in quick_upload.py when typeupload was defined without mediaupload
  resolve http://plone.org/products/collective.quickupload/issues/5
  macadames and kayeva 2010-10-10

* improve doctests (with last bugfixes on typeupload/mediaupload)
  macadames 2010-10-10

* fix doctests in Plone4
  macadames 2010-10-10

1.0.2
-----

* IE7 css fixes upload button was uggly
  macadames 2010-09-22

* fix content-type header with FireFox xhr upload
  sometimes is missing
  macadames 2010-09-24

* don't use unicode in setFileName
  because it break Archetypes File Field download (unicode decode error)
  macadames 2010-09-24

* minor fixes in medialabel for upload
  macadames 2010-09-26

1.0.1
-----

* fix set_id or check_id methods
  now called on context, no more on aq_parent(context)
  macadames 2010-09-14

* slow down the removing of progressBar
  to see something even when Plone is too fast :-)
  macadames 2010-09-15

* try to find the good content_type for uploaded files
  using plone mime_types_registry when
  mimetypes.guess_type(file_name) returns (None, None)
  macadames 2010-09-17

* fix strange ATFile behavior with content_types
  when passing mutator(data, content_type=content_type)